// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ol runs correctly 1`] = `
Array [
  "3",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              "Item 1
",
            ],
            "props": Object {
              "style": Object {
                "fontSize": "12px",
              },
            },
            "type": "span",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              "Item 2
",
            ],
            "props": Object {
              "style": Object {
                "fontSize": "12px",
              },
            },
            "type": "span",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              "Item 3",
            ],
            "props": Object {
              "style": Object {
                "fontSize": "12px",
              },
            },
            "type": "span",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ol",
  },
]
`;

exports[`ul runs correctly 1`] = `
Array [
  "3",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              "Item 1
",
            ],
            "props": Object {
              "style": Object {
                "fontSize": "12px",
              },
            },
            "type": "span",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              "Item 2
",
            ],
            "props": Object {
              "style": Object {
                "fontSize": "12px",
              },
            },
            "type": "span",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              "Item 3",
            ],
            "props": Object {
              "style": Object {
                "fontSize": "12px",
              },
            },
            "type": "span",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ul",
  },
]
`;
